Disciplinas/2025.1/2025.1.COM/comp/exercicio3/ParserP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.0.2 from ParserP.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_calc -> Expr                                (0)
	Expr -> ExprLog                                    (1)
	Expr -> ExprAri                                    (2)
	ExprAri -> ExprAri '+' TermAri                     (3)
	ExprAri -> ExprAri '-' TermAri                     (4)
	ExprAri -> TermAri                                 (5)
	TermAri -> TermAri '*' FactorAri                   (6)
	TermAri -> TermAri '/' FactorAri                   (7)
	TermAri -> FactorAri                               (8)
	FactorAri -> Num                                   (9)
	FactorAri -> '(' ExprAri ')'                       (10)
	ExprRel -> ExprAri '>' ExprAri                     (11)
	ExprRel -> ExprAri '<' ExprAri                     (12)
	ExprRel -> ExprAri '>=' ExprAri                    (13)
	ExprRel -> ExprAri '<=' ExprAri                    (14)
	ExprRel -> ExprAri '==' ExprAri                    (15)
	ExprRel -> ExprAri '/=' ExprAri                    (16)
	ExprLog -> ExprLog '||' TermLog                    (17)
	ExprLog -> ExprLog '&&' TermLog                    (18)
	ExprLog -> TermLog                                 (19)
	TermLog -> '!' TermLog                             (20)
	TermLog -> '(' ExprLog ')'                         (21)
	TermLog -> ExprRel                                 (22)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'+'            { ADD }
	'-'            { SUB }
	'*'            { MUL }
	'/'            { DIV }
	'('            { LPAR }
	')'            { RPAR }
	'&&'           { AND }
	'||'           { OR }
	'!'            { NOT }
	'=='           { EQUAL }
	'/='           { NOT_EQUAL }
	'>='           { GREATER_THAN_EQUAL }
	'<='           { LESS_THAN_EQUAL }
	'>'            { GREATER_THAN }
	'<'            { LESS_THAN }
	Num            { NUM $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_calc     rule  0
	Expr            rules 1, 2
	ExprAri         rules 3, 4, 5
	TermAri         rules 6, 7, 8
	FactorAri       rules 9, 10
	ExprRel         rules 11, 12, 13, 14, 15, 16
	ExprLog         rules 17, 18, 19
	TermLog         rules 20, 21, 22

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_calc -> . Expr                               (rule 0)

	'('            shift, and enter state 8
	'!'            shift, and enter state 9
	Num            shift, and enter state 10

	Expr           goto state 11
	ExprAri        goto state 12
	TermAri        goto state 3
	FactorAri      goto state 4
	ExprRel        goto state 5
	ExprLog        goto state 6
	TermLog        goto state 7

State 1

	Expr -> . ExprLog                                   (rule 1)

	'('            shift, and enter state 8
	'!'            shift, and enter state 9
	Num            shift, and enter state 10

	ExprAri        goto state 2
	TermAri        goto state 3
	FactorAri      goto state 4
	ExprRel        goto state 5
	ExprLog        goto state 6
	TermLog        goto state 7

State 2

	ExprAri -> ExprAri . '+' TermAri                    (rule 3)
	ExprAri -> ExprAri . '-' TermAri                    (rule 4)
	ExprRel -> ExprAri . '>' ExprAri                    (rule 11)
	ExprRel -> ExprAri . '<' ExprAri                    (rule 12)
	ExprRel -> ExprAri . '>=' ExprAri                   (rule 13)
	ExprRel -> ExprAri . '<=' ExprAri                   (rule 14)
	ExprRel -> ExprAri . '==' ExprAri                   (rule 15)
	ExprRel -> ExprAri . '/=' ExprAri                   (rule 16)

	'+'            shift, and enter state 13
	'-'            shift, and enter state 14
	'=='           shift, and enter state 15
	'/='           shift, and enter state 16
	'>='           shift, and enter state 17
	'<='           shift, and enter state 18
	'>'            shift, and enter state 19
	'<'            shift, and enter state 20


State 3

	ExprAri -> TermAri .                                (rule 5)
	TermAri -> TermAri . '*' FactorAri                  (rule 6)
	TermAri -> TermAri . '/' FactorAri                  (rule 7)

	'+'            reduce using rule 5
	'-'            reduce using rule 5
	'*'            shift, and enter state 26
	'/'            shift, and enter state 27
	')'            reduce using rule 5
	'&&'           reduce using rule 5
	'||'           reduce using rule 5
	'=='           reduce using rule 5
	'/='           reduce using rule 5
	'>='           reduce using rule 5
	'<='           reduce using rule 5
	'>'            reduce using rule 5
	'<'            reduce using rule 5
	%eof           reduce using rule 5


State 4

	TermAri -> FactorAri .                              (rule 8)

	'+'            reduce using rule 8
	'-'            reduce using rule 8
	'*'            reduce using rule 8
	'/'            reduce using rule 8
	')'            reduce using rule 8
	'&&'           reduce using rule 8
	'||'           reduce using rule 8
	'=='           reduce using rule 8
	'/='           reduce using rule 8
	'>='           reduce using rule 8
	'<='           reduce using rule 8
	'>'            reduce using rule 8
	'<'            reduce using rule 8
	%eof           reduce using rule 8


State 5

	TermLog -> ExprRel .                                (rule 22)

	')'            reduce using rule 22
	'&&'           reduce using rule 22
	'||'           reduce using rule 22
	%eof           reduce using rule 22


State 6

	Expr -> ExprLog .                                   (rule 1)
	ExprLog -> ExprLog . '||' TermLog                   (rule 17)
	ExprLog -> ExprLog . '&&' TermLog                   (rule 18)

	'&&'           shift, and enter state 24
	'||'           shift, and enter state 25
	%eof           reduce using rule 1


State 7

	ExprLog -> TermLog .                                (rule 19)

	')'            reduce using rule 19
	'&&'           reduce using rule 19
	'||'           reduce using rule 19
	%eof           reduce using rule 19


State 8

	FactorAri -> '(' . ExprAri ')'                      (rule 10)
	TermLog -> '(' . ExprLog ')'                        (rule 21)

	'('            shift, and enter state 8
	'!'            shift, and enter state 9
	Num            shift, and enter state 10

	ExprAri        goto state 22
	TermAri        goto state 3
	FactorAri      goto state 4
	ExprRel        goto state 5
	ExprLog        goto state 23
	TermLog        goto state 7

State 9

	TermLog -> '!' . TermLog                            (rule 20)

	'('            shift, and enter state 8
	'!'            shift, and enter state 9
	Num            shift, and enter state 10

	ExprAri        goto state 2
	TermAri        goto state 3
	FactorAri      goto state 4
	ExprRel        goto state 5
	TermLog        goto state 21

State 10

	FactorAri -> Num .                                  (rule 9)

	'+'            reduce using rule 9
	'-'            reduce using rule 9
	'*'            reduce using rule 9
	'/'            reduce using rule 9
	')'            reduce using rule 9
	'&&'           reduce using rule 9
	'||'           reduce using rule 9
	'=='           reduce using rule 9
	'/='           reduce using rule 9
	'>='           reduce using rule 9
	'<='           reduce using rule 9
	'>'            reduce using rule 9
	'<'            reduce using rule 9
	%eof           reduce using rule 9


State 11

	%start_calc -> Expr .                               (rule 0)

	%eof           accept


State 12

	Expr -> ExprAri .                                   (rule 2)
	ExprAri -> ExprAri . '+' TermAri                    (rule 3)
	ExprAri -> ExprAri . '-' TermAri                    (rule 4)
	ExprRel -> ExprAri . '>' ExprAri                    (rule 11)
	ExprRel -> ExprAri . '<' ExprAri                    (rule 12)
	ExprRel -> ExprAri . '>=' ExprAri                   (rule 13)
	ExprRel -> ExprAri . '<=' ExprAri                   (rule 14)
	ExprRel -> ExprAri . '==' ExprAri                   (rule 15)
	ExprRel -> ExprAri . '/=' ExprAri                   (rule 16)

	'+'            shift, and enter state 13
	'-'            shift, and enter state 14
	'=='           shift, and enter state 15
	'/='           shift, and enter state 16
	'>='           shift, and enter state 17
	'<='           shift, and enter state 18
	'>'            shift, and enter state 19
	'<'            shift, and enter state 20
	%eof           reduce using rule 2


State 13

	ExprAri -> ExprAri '+' . TermAri                    (rule 3)

	'('            shift, and enter state 29
	Num            shift, and enter state 10

	TermAri        goto state 42
	FactorAri      goto state 4

State 14

	ExprAri -> ExprAri '-' . TermAri                    (rule 4)

	'('            shift, and enter state 29
	Num            shift, and enter state 10

	TermAri        goto state 41
	FactorAri      goto state 4

State 15

	ExprRel -> ExprAri '==' . ExprAri                   (rule 15)

	'('            shift, and enter state 29
	Num            shift, and enter state 10

	ExprAri        goto state 40
	TermAri        goto state 3
	FactorAri      goto state 4

State 16

	ExprRel -> ExprAri '/=' . ExprAri                   (rule 16)

	'('            shift, and enter state 29
	Num            shift, and enter state 10

	ExprAri        goto state 39
	TermAri        goto state 3
	FactorAri      goto state 4

State 17

	ExprRel -> ExprAri '>=' . ExprAri                   (rule 13)

	'('            shift, and enter state 29
	Num            shift, and enter state 10

	ExprAri        goto state 38
	TermAri        goto state 3
	FactorAri      goto state 4

State 18

	ExprRel -> ExprAri '<=' . ExprAri                   (rule 14)

	'('            shift, and enter state 29
	Num            shift, and enter state 10

	ExprAri        goto state 37
	TermAri        goto state 3
	FactorAri      goto state 4

State 19

	ExprRel -> ExprAri '>' . ExprAri                    (rule 11)

	'('            shift, and enter state 29
	Num            shift, and enter state 10

	ExprAri        goto state 36
	TermAri        goto state 3
	FactorAri      goto state 4

State 20

	ExprRel -> ExprAri '<' . ExprAri                    (rule 12)

	'('            shift, and enter state 29
	Num            shift, and enter state 10

	ExprAri        goto state 35
	TermAri        goto state 3
	FactorAri      goto state 4

State 21

	TermLog -> '!' TermLog .                            (rule 20)

	')'            reduce using rule 20
	'&&'           reduce using rule 20
	'||'           reduce using rule 20
	%eof           reduce using rule 20


State 22

	ExprAri -> ExprAri . '+' TermAri                    (rule 3)
	ExprAri -> ExprAri . '-' TermAri                    (rule 4)
	FactorAri -> '(' ExprAri . ')'                      (rule 10)
	ExprRel -> ExprAri . '>' ExprAri                    (rule 11)
	ExprRel -> ExprAri . '<' ExprAri                    (rule 12)
	ExprRel -> ExprAri . '>=' ExprAri                   (rule 13)
	ExprRel -> ExprAri . '<=' ExprAri                   (rule 14)
	ExprRel -> ExprAri . '==' ExprAri                   (rule 15)
	ExprRel -> ExprAri . '/=' ExprAri                   (rule 16)

	'+'            shift, and enter state 13
	'-'            shift, and enter state 14
	')'            shift, and enter state 34
	'=='           shift, and enter state 15
	'/='           shift, and enter state 16
	'>='           shift, and enter state 17
	'<='           shift, and enter state 18
	'>'            shift, and enter state 19
	'<'            shift, and enter state 20


State 23

	ExprLog -> ExprLog . '||' TermLog                   (rule 17)
	ExprLog -> ExprLog . '&&' TermLog                   (rule 18)
	TermLog -> '(' ExprLog . ')'                        (rule 21)

	')'            shift, and enter state 33
	'&&'           shift, and enter state 24
	'||'           shift, and enter state 25


State 24

	ExprLog -> ExprLog '&&' . TermLog                   (rule 18)

	'('            shift, and enter state 8
	'!'            shift, and enter state 9
	Num            shift, and enter state 10

	ExprAri        goto state 2
	TermAri        goto state 3
	FactorAri      goto state 4
	ExprRel        goto state 5
	TermLog        goto state 32

State 25

	ExprLog -> ExprLog '||' . TermLog                   (rule 17)

	'('            shift, and enter state 8
	'!'            shift, and enter state 9
	Num            shift, and enter state 10

	ExprAri        goto state 2
	TermAri        goto state 3
	FactorAri      goto state 4
	ExprRel        goto state 5
	TermLog        goto state 31

State 26

	TermAri -> TermAri '*' . FactorAri                  (rule 6)

	'('            shift, and enter state 29
	Num            shift, and enter state 10

	FactorAri      goto state 30

State 27

	TermAri -> TermAri '/' . FactorAri                  (rule 7)

	'('            shift, and enter state 29
	Num            shift, and enter state 10

	FactorAri      goto state 28

State 28

	TermAri -> TermAri '/' FactorAri .                  (rule 7)

	'+'            reduce using rule 7
	'-'            reduce using rule 7
	'*'            reduce using rule 7
	'/'            reduce using rule 7
	')'            reduce using rule 7
	'&&'           reduce using rule 7
	'||'           reduce using rule 7
	'=='           reduce using rule 7
	'/='           reduce using rule 7
	'>='           reduce using rule 7
	'<='           reduce using rule 7
	'>'            reduce using rule 7
	'<'            reduce using rule 7
	%eof           reduce using rule 7


State 29

	FactorAri -> '(' . ExprAri ')'                      (rule 10)

	'('            shift, and enter state 29
	Num            shift, and enter state 10

	ExprAri        goto state 43
	TermAri        goto state 3
	FactorAri      goto state 4

State 30

	TermAri -> TermAri '*' FactorAri .                  (rule 6)

	'+'            reduce using rule 6
	'-'            reduce using rule 6
	'*'            reduce using rule 6
	'/'            reduce using rule 6
	')'            reduce using rule 6
	'&&'           reduce using rule 6
	'||'           reduce using rule 6
	'=='           reduce using rule 6
	'/='           reduce using rule 6
	'>='           reduce using rule 6
	'<='           reduce using rule 6
	'>'            reduce using rule 6
	'<'            reduce using rule 6
	%eof           reduce using rule 6


State 31

	ExprLog -> ExprLog '||' TermLog .                   (rule 17)

	')'            reduce using rule 17
	'&&'           reduce using rule 17
	'||'           reduce using rule 17
	%eof           reduce using rule 17


State 32

	ExprLog -> ExprLog '&&' TermLog .                   (rule 18)

	')'            reduce using rule 18
	'&&'           reduce using rule 18
	'||'           reduce using rule 18
	%eof           reduce using rule 18


State 33

	TermLog -> '(' ExprLog ')' .                        (rule 21)

	')'            reduce using rule 21
	'&&'           reduce using rule 21
	'||'           reduce using rule 21
	%eof           reduce using rule 21


State 34

	FactorAri -> '(' ExprAri ')' .                      (rule 10)

	'+'            reduce using rule 10
	'-'            reduce using rule 10
	'*'            reduce using rule 10
	'/'            reduce using rule 10
	')'            reduce using rule 10
	'&&'           reduce using rule 10
	'||'           reduce using rule 10
	'=='           reduce using rule 10
	'/='           reduce using rule 10
	'>='           reduce using rule 10
	'<='           reduce using rule 10
	'>'            reduce using rule 10
	'<'            reduce using rule 10
	%eof           reduce using rule 10


State 35

	ExprAri -> ExprAri . '+' TermAri                    (rule 3)
	ExprAri -> ExprAri . '-' TermAri                    (rule 4)
	ExprRel -> ExprAri '<' ExprAri .                    (rule 12)

	'+'            shift, and enter state 13
	'-'            shift, and enter state 14
	')'            reduce using rule 12
	'&&'           reduce using rule 12
	'||'           reduce using rule 12
	%eof           reduce using rule 12


State 36

	ExprAri -> ExprAri . '+' TermAri                    (rule 3)
	ExprAri -> ExprAri . '-' TermAri                    (rule 4)
	ExprRel -> ExprAri '>' ExprAri .                    (rule 11)

	'+'            shift, and enter state 13
	'-'            shift, and enter state 14
	')'            reduce using rule 11
	'&&'           reduce using rule 11
	'||'           reduce using rule 11
	%eof           reduce using rule 11


State 37

	ExprAri -> ExprAri . '+' TermAri                    (rule 3)
	ExprAri -> ExprAri . '-' TermAri                    (rule 4)
	ExprRel -> ExprAri '<=' ExprAri .                   (rule 14)

	'+'            shift, and enter state 13
	'-'            shift, and enter state 14
	')'            reduce using rule 14
	'&&'           reduce using rule 14
	'||'           reduce using rule 14
	%eof           reduce using rule 14


State 38

	ExprAri -> ExprAri . '+' TermAri                    (rule 3)
	ExprAri -> ExprAri . '-' TermAri                    (rule 4)
	ExprRel -> ExprAri '>=' ExprAri .                   (rule 13)

	'+'            shift, and enter state 13
	'-'            shift, and enter state 14
	')'            reduce using rule 13
	'&&'           reduce using rule 13
	'||'           reduce using rule 13
	%eof           reduce using rule 13


State 39

	ExprAri -> ExprAri . '+' TermAri                    (rule 3)
	ExprAri -> ExprAri . '-' TermAri                    (rule 4)
	ExprRel -> ExprAri '/=' ExprAri .                   (rule 16)

	'+'            shift, and enter state 13
	'-'            shift, and enter state 14
	')'            reduce using rule 16
	'&&'           reduce using rule 16
	'||'           reduce using rule 16
	%eof           reduce using rule 16


State 40

	ExprAri -> ExprAri . '+' TermAri                    (rule 3)
	ExprAri -> ExprAri . '-' TermAri                    (rule 4)
	ExprRel -> ExprAri '==' ExprAri .                   (rule 15)

	'+'            shift, and enter state 13
	'-'            shift, and enter state 14
	')'            reduce using rule 15
	'&&'           reduce using rule 15
	'||'           reduce using rule 15
	%eof           reduce using rule 15


State 41

	ExprAri -> ExprAri '-' TermAri .                    (rule 4)
	TermAri -> TermAri . '*' FactorAri                  (rule 6)
	TermAri -> TermAri . '/' FactorAri                  (rule 7)

	'+'            reduce using rule 4
	'-'            reduce using rule 4
	'*'            shift, and enter state 26
	'/'            shift, and enter state 27
	')'            reduce using rule 4
	'&&'           reduce using rule 4
	'||'           reduce using rule 4
	'=='           reduce using rule 4
	'/='           reduce using rule 4
	'>='           reduce using rule 4
	'<='           reduce using rule 4
	'>'            reduce using rule 4
	'<'            reduce using rule 4
	%eof           reduce using rule 4


State 42

	ExprAri -> ExprAri '+' TermAri .                    (rule 3)
	TermAri -> TermAri . '*' FactorAri                  (rule 6)
	TermAri -> TermAri . '/' FactorAri                  (rule 7)

	'+'            reduce using rule 3
	'-'            reduce using rule 3
	'*'            shift, and enter state 26
	'/'            shift, and enter state 27
	')'            reduce using rule 3
	'&&'           reduce using rule 3
	'||'           reduce using rule 3
	'=='           reduce using rule 3
	'/='           reduce using rule 3
	'>='           reduce using rule 3
	'<='           reduce using rule 3
	'>'            reduce using rule 3
	'<'            reduce using rule 3
	%eof           reduce using rule 3


State 43

	ExprAri -> ExprAri . '+' TermAri                    (rule 3)
	ExprAri -> ExprAri . '-' TermAri                    (rule 4)
	FactorAri -> '(' ExprAri . ')'                      (rule 10)

	'+'            shift, and enter state 13
	'-'            shift, and enter state 14
	')'            shift, and enter state 34


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 23
Number of terminals: 16
Number of non-terminals: 8
Number of states: 44
